# puls-gpw

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  _run_generate_post.py  api_main.py  company_stats_main.py  config.py  etf_quotes_main.py  main.py  notification_main.py  pipeline.py  post_main.py  pyproject.toml  tach.toml
.claude/: .10x-cli-manifest.json  settings.local.json
.github/workflows/: ai-code-review.yml  ai-security-review.yml  deploy.yml  sync-linear-to-github.yml  tests.yml
ai/: client.py  prompts.py  supervisor.py
context/deployment/: deploy-plan.md
context/foundation/: infra.md  infrastructure.md  lessons.md  prd.md  roadmap.md  shape-notes.md  (+5 more)
db/: bigquery.py
notifier/: email.py
oldProjectData/: bankier.py  base.py  content_parser.py  gemini_worker.py  prompts.py
parser/: content.py
scraper/: bankier.py  base.py
scripts/: backfill_companies.py  backfill_email_verified.py  migrate_announcements_partition.py  migrate_owner_identity.py  reanalyze_failed.py  seed_companies.py  test_alert.py  test_bq.py  test_bq_company_stats_merge.py  test_bq_etf_quotes.py  test_bq_portfolio_calendar.py  test_bq_user_portfolio_positions.py  test_bq_user_portfolios.py  test_bq_users.py
src/: analyzer.py  api.py  auth.py  bankier_metrics.py  company_profile.py  exceptions.py  gemini_client.py  gpw_etf_metrics.py  http_client.py  logging_setup.py  notifier.py  parser.py  portfolio_calendar.py  portfolio_thread_composer.py  portfolio_treemap.py  post_generator.py  post_selection.py  post_supervisor.py  scraper.py  x_publisher.py
static/: faro-v8.html  index.html  index_old.html
storage/: bigquery.py
tests/: test_analyzer.py  test_api.py  test_auth.py  test_auth_api.py  test_bankier_metrics.py  test_bigquery.py  test_company_profile.py  test_company_stats_main.py  test_etf_bigquery.py  test_gemini_client.py  test_gpw_etf_metrics.py  test_main.py  test_migrate_owner_identity.py  test_notification_main.py  test_notifier.py  test_parser.py  test_portfolio_calendar.py  test_portfolio_thread_composer.py  test_portfolio_treemap.py  test_post_generator.py  test_post_main.py  test_post_selection.py  test_post_supervisor.py  test_scraper.py  test_treemap_layout.js  test_x_publisher.py
utils/: company.py  gpw_tickers.py
(+566 files in other folders)
