[project]
name = "puls-gpw"
version = "0.1.0"
description = "ESPI/EBI analyzer for GPW and NewConnect announcements"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "pypdf>=4.0",
    "google-cloud-bigquery>=3.25",
    "google-genai>=1.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=3.2",
    "tzdata>=2024.1",
    "json5>=0.9",
    "tweepy>=4.14",
]

[dependency-groups]
dev = [
    "pip-audit>=2.10.0",
    "pytest>=8.0",
    "respx>=0.21",
    "pytest-playwright>=0.6",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "gdpr: tests that need the real GDPR banner (skip the auto-accept fixture)",
]

[tool.ruff.lint.per-file-ignores]
# Entry points call load_dotenv()/configure_logging() before importing modules
# that read env vars at import time (GCP clients, BIGQUERY_DATASET, etc.) —
# see the GCP client initialization lesson in context/foundation/lessons.md.
"main.py" = ["E402"]
"src/api.py" = ["E402"]

